fix: update read-chip content color for better visibility

--- a/src/app/shared/components/book/book-detail/book-detail.component.scss
+++ b/src/app/shared/components/book/book-detail/book-detail.component.scss
@@ -208,6 +208,7 @@ ion-header {
 
 .read-chip .content {
     background: #fff;
+    color: #333;
     border-radius: 15px;
     padding: 2px 10px;
     text-align: center;
